--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="left-column">
-      <img class= "logo" src="C:\Users\panav\Desktop\Notes\Web developing\Web development\Fly Goldfinch\images\logo.jpeg" alt="logo">
+      <img class= "logo" src="images\logo.jpeg" alt="logo">
     <div class="sign-in">
 
 
@@ -22,10 +22,10 @@
         <br>
         <br>
         <center>
-        <a href="C:\Users\panav\Desktop\Notes\Web developing\Web development\Fly Goldfinch\second-page.html" class="btn">Sign in</a>
+        <a href="second-page.html" class="btn">Sign in</a>
         </center>
     </div>
     </div>
-    <img class="index-img" src="C:\Users\panav\Desktop\Notes\Web developing\Web development\Fly Goldfinch\images\index-image.jpeg" alt="">
+    <img class="index-img" src="images\index-image.jpeg" alt="">
   </body>
 </html>
