--- a/second-page.html
+++ b/second-page.html
@@ -10,7 +10,7 @@
   <body>
     <div class="top">
       <div class="left">
-        <img class="logo-img" src="C:\Users\panav\Desktop\Notes\Web developing\Web development\Fly Goldfinch\images\logo-img.jpeg" alt="logo">
+        <img class="logo-img" src="images\logo-img.jpeg" alt="logo">
         <p class="trawish">Trawish</p>
         <div class="options">
           <a class="btn1" href="#">Home</a> <br><br><br>
@@ -58,9 +58,9 @@
             </tr>
             <tr>
               <center>
-                <td><a class="btn10" href="C:\Users\panav\Desktop\Notes\Web developing\Web development\Fly Goldfinch\index.html">Cancel</a></td>
+                <td><a class="btn10" href="index.html">Cancel</a></td>
                 </center>
-              <td><a class="submit" href="C:\Users\panav\Desktop\Notes\Web developing\Web development\Fly Goldfinch\index.html">Save</a></td>
+              <td><a class="submit" href="index.html">Save</a></td>
             </tr>
           </table>
 
